samples/_failures_safe/1761196030_2df0e6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_70a8bb20.c: In function ‘main’:
./samples/SAFE/__tmp_70a8bb20.c:171:12: error: missing terminating " character
  171 |     printf("Enter expression to token
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_70a8bb20.c:171:5: error: expected expression at end of input
  171 |     printf("Enter expression to token
      |     ^~~~~~
./samples/SAFE/__tmp_70a8bb20.c:171:5: error: expected declaration or statement at end of input
